--- a/index.html
+++ b/index.html
@@ -47,10 +47,109 @@
     <label for="students">Select Student:</label>
     <select id="students">
         <option value="" disabled selected>Select a student</option>
-        <option value="John Doe">John Doe</option>
-        <option value="Jane Smith">Jane Smith</option>
-        <option value="Alice Johnson">Alice Johnson</option>
-        <option value="Bob Brown">Bob Brown</option>
+        <select name="students">
+    <option value="aboudou-belinga-gladys">aboudou belinga gladys</option>
+    <option value="achille-aristide-ndebi">achille aristide ndebi</option>
+    <option value="achongwa-emilio-auh">achongwa emilio auh</option>
+    <option value="aichatou-mohamadou">aichatou mohamadou</option>
+    <option value="ananfa-dongmo-giresse-b">ananfa dongmo giresse.b.</option>
+    <option value="asamyame-johnson-anyikoh">asamyame johnson anyikoh</option>
+    <option value="atehyim-theresia-abyie">atehyim theresia abyie</option>
+    <option value="awah-destiny-nji">awah destiny nji</option>
+    <option value="ayah-rashael-anne">ayah rashael anne</option>
+    <option value="ayuk-enow-whitey-ashly">ayuk-enow whitey ashly</option>
+    <option value="azefack-danelle">azefack danelle</option>
+    <option value="bakwowi-stella-jestina-nagen">bakwowi stella jestina nagen</option>
+    <option value="ban-ruth-stevie-miltread">ban ruth stevie miltread</option>
+    <option value="bangwen-bikoy-steve-benjamin">bangwen bikoy steve benjamin</option>
+    <option value="banmbong-berinice-ghakanyuy">banmbong berinice ghakanyuy</option>
+    <option value="bebite-laura-khan">bebite laura khan</option>
+    <option value="beyala-tina-diana-christelle-yvana">beyala tina diana christelle yvana</option>
+    <option value="bong-adeline-nate">bong adeline nate</option>
+    <option value="chiaka-lehna-anu-cheryl">chiaka lehna anu cheryl</option>
+    <option value="chifu-merrilyn">chifu merrilyn</option>
+    <option value="clareince-berinyuy">clareince berinyuy</option>
+    <option value="dongue-jessica-daine">dongue jessica daine</option>
+    <option value="ekinde-mekolle-muke-queenie-lor">ekinde mekolle muke queenie-l'or</option>
+    <option value="emam-rabiatou">emam rabiatou</option>
+    <option value="etoundi-mvondo-martin">etoundi mvondo martin</option>
+    <option value="euphrecia-bi">euphrecia bi</option>
+    <option value="fennyui-gliniss-laure">fennyui gliniss laure</option>
+    <option value="fomena-kueda-loraine">fomena kueda loraine</option>
+    <option value="fongane-ruth-aben">fongane ruth aben</option>
+    <option value="fonjo-midrate-muyang">fonjo midrate muyang</option>
+    <option value="gribone-claudine-unity">gribone claudine unity</option>
+    <option value="jona-mbiatan-futune">jona mbiatan futune</option>
+    <option value="kenmogne-tsemo-raissa-dalvilane">kenmogne tsemo raissa dalvilane</option>
+    <option value="kien-rilinds-anye">kien rilinds anye</option>
+    <option value="kikwi-petra">kikwi petra</option>
+    <option value="kinyuy-precious-wibra">kinyuy precious wibra</option>
+    <option value="kongnyuy-hariratu">kongnyuy hariratu</option>
+    <option value="kudi-erasmus-oteh">kudi erasmus oteh</option>
+    <option value="kwilabuin-doreen-ngonfas">kwilabuin doreen ngonfas</option>
+    <option value="ledru-raymond-michael">ledru raymond michael</option>
+    <option value="lincy-musoro-ngoh">lincy musoro ngoh</option>
+    <option value="lokeng-loic-jinoir">lokeng loic jinoir</option>
+    <option value="mafolac-messanga-arriane">mafolac messanga arriane</option>
+    <option value="mamba-ngoy-constant-marie-ledoux">mamba ngoy constant marie ledoux</option>
+    <option value="mbakem-siephany-halle">mbakem siephany halle</option>
+    <option value="mbom-bongjoh-noella-bih">mbom bongjoh noella bih</option>
+    <option value="mc-eward-afumbom-ngong">mc eward afumbom ngong</option>
+    <option value="mekinda-amougou">mekinda amougou</option>
+    <option value="metila-ngono-gisele">metila ngono gisele</option>
+    <option value="mosama-quinoline-bertha">mosama quinoline bertha</option>
+    <option value="mugeh-solange">mugeh solange</option>
+    <option value="nana-sherina">nana sherina</option>
+    <option value="nchotu-mavet-abongha">nchotu mavet abongha</option>
+    <option value="ndzineng-chelcy-fien">ndzineng chelcy fien</option>
+    <option value="neba-favour-bih">neba favour bih</option>
+    <option value="nfor-belinda-aba">nfor belinda aba</option>
+    <option value="nga-owona-ekani">nga owona ekani</option>
+    <option value="ngong-marinus">ngong marinus</option>
+    <option value="tchuembou-mopen-gwladys-leticia">tchuembou mopen gwladys leticia</option>
+    <option value="nkamenyi-tchio-stadile">nkamenyi tchio stadile</option>
+    <option value="noukoua-florinda-stalone">noukoua florinda stalone</option>
+    <option value="nounkeu-yimga-princesse-elvira">nounkeu yimga princesse elvira</option>
+    <option value="nso-nsongan-germaine">nso nsongan germaine</option>
+    <option value="nsom-kelly-fulai">nsom kelly fulai</option>
+    <option value="nsouanfouo-nzegah-fresnel">nsouanfouo nzegah fresnel</option>
+    <option value="nyemb-sylvestre">nyemb sylvestre</option>
+    <option value="nyuella-nange">nyuella nange</option>
+    <option value="ondike-gladys-mokabwe">ondike gladys mokabwe</option>
+    <option value="ovaa-mbida-marie-lysette">ovaa mbida marie lysette</option>
+    <option value="pangwa-kemayou-mariane-carene">pangwa kemayou mariane carene</option>
+    <option value="precious-faith-afanwi">precious faith afanwi</option>
+    <option value="raye-njifen-nahima">raye njifen nahima</option>
+    <option value="simo-diangha-ariel-stevine">simo diangha ariel stevine</option>
+    <option value="ngwain-dolen">ngwain dolen</option>
+    <option value="song-jerry-afuma">song jerry afuma</option>
+    <option value="song-shalom">song shalom</option>
+    <option value="tamufor-julienne-ning">tamufor julienne ning</option>
+    <option value="tamunting-danila">tamunting danila</option>
+    <option value="tayo-quinivette-ewo">tayo quinivette ewo</option>
+    <option value="teku-rachel-ewah">teku rachel ewah</option>
+    <option value="temgoua-tchangoue-georgy-lafine">temgoua tchangoue georgy lafine</option>
+    <option value="tendong-glenda-ngoh">tendong glenda ngoh</option>
+    <option value="tidoh-tchoffo">tidoh tchoffo</option>
+    <option value="tizee-quintar-anyam-nkeng">tizee quintar anyam nkeng</option>
+    <option value="toh-einstein-ajim">toh einstein ajim</option>
+    <option value="tohman-ephesians-bi">tohman ephesians bi</option>
+    <option value="wain-emmanuel-ndi">wain emmanuel ndi</option>
+    <option value="awafong-sandra-mechie">awafong sandra mechie</option>
+    <option value="yomi-nguewouo-larissa">yomi nguewouo larissa</option>
+    <option value="zoa-elong-neisa">zoa elong neisa</option>
+    <option value="mbiandun-kouamou-jossinet">mbiandun kouamou jossinet</option>
+    <option value="birwe-abel-foulna">birwe abel foulna</option>
+    <option value="nkouakep-diane-laure">nkouakep diane laure</option>
+    <option value="nga-belinga-marie">nga belinga marie</option>
+    <option value="nguevou-ange-etelle">nguevou ange etelle</option>
+    <option value="nnanga-olama-elisabeth">nnanga olama elisabeth</option>
+    <option value="kenfack-stephy-lesterone">kenfack stephy lesterone</option>
+    <option value="njike-tonmy-steve-wilfred">njike tonmy steve wilfred</option>
+    <option value="sinjinge-juliet-mensiy">sinjinge juliet mensiy</option>
+    <option value="mbom-bongjoh-trene-kuboh">mbom bongjoh trene kuboh</option>
+</select>
+
     </select>
     <label for="pin">Enter PIN:</label>
     <input type="password" id="pin" placeholder="Enter your PIN">
