--- a/index.html
+++ b/index.html
@@ -45,113 +45,112 @@
 <body>
     <h1>Attendance System with PIN Verification</h1>
     <label for="students">Select Student:</label>
-    <select id="students">
-        <option value="" disabled selected>Select a student</option>
-        <select name="students">
-    <option value="aboudou-belinga-gladys">aboudou belinga gladys</option>
-    <option value="achille-aristide-ndebi">achille aristide ndebi</option>
-    <option value="achongwa-emilio-auh">achongwa emilio auh</option>
-    <option value="aichatou-mohamadou">aichatou mohamadou</option>
-    <option value="ananfa-dongmo-giresse-b">ananfa dongmo giresse.b.</option>
-    <option value="asamyame-johnson-anyikoh">asamyame johnson anyikoh</option>
-    <option value="atehyim-theresia-abyie">atehyim theresia abyie</option>
-    <option value="awah-destiny-nji">awah destiny nji</option>
-    <option value="ayah-rashael-anne">ayah rashael anne</option>
-    <option value="ayuk-enow-whitey-ashly">ayuk-enow whitey ashly</option>
-    <option value="azefack-danelle">azefack danelle</option>
-    <option value="bakwowi-stella-jestina-nagen">bakwowi stella jestina nagen</option>
-    <option value="ban-ruth-stevie-miltread">ban ruth stevie miltread</option>
-    <option value="bangwen-bikoy-steve-benjamin">bangwen bikoy steve benjamin</option>
-    <option value="banmbong-berinice-ghakanyuy">banmbong berinice ghakanyuy</option>
-    <option value="bebite-laura-khan">bebite laura khan</option>
-    <option value="beyala-tina-diana-christelle-yvana">beyala tina diana christelle yvana</option>
-    <option value="bong-adeline-nate">bong adeline nate</option>
-    <option value="chiaka-lehna-anu-cheryl">chiaka lehna anu cheryl</option>
-    <option value="chifu-merrilyn">chifu merrilyn</option>
-    <option value="clareince-berinyuy">clareince berinyuy</option>
-    <option value="dongue-jessica-daine">dongue jessica daine</option>
-    <option value="ekinde-mekolle-muke-queenie-lor">ekinde mekolle muke queenie-l'or</option>
-    <option value="emam-rabiatou">emam rabiatou</option>
-    <option value="etoundi-mvondo-martin">etoundi mvondo martin</option>
-    <option value="euphrecia-bi">euphrecia bi</option>
-    <option value="fennyui-gliniss-laure">fennyui gliniss laure</option>
-    <option value="fomena-kueda-loraine">fomena kueda loraine</option>
-    <option value="fongane-ruth-aben">fongane ruth aben</option>
-    <option value="fonjo-midrate-muyang">fonjo midrate muyang</option>
-    <option value="gribone-claudine-unity">gribone claudine unity</option>
-    <option value="jona-mbiatan-futune">jona mbiatan futune</option>
-    <option value="kenmogne-tsemo-raissa-dalvilane">kenmogne tsemo raissa dalvilane</option>
-    <option value="kien-rilinds-anye">kien rilinds anye</option>
-    <option value="kikwi-petra">kikwi petra</option>
-    <option value="kinyuy-precious-wibra">kinyuy precious wibra</option>
-    <option value="kongnyuy-hariratu">kongnyuy hariratu</option>
-    <option value="kudi-erasmus-oteh">kudi erasmus oteh</option>
-    <option value="kwilabuin-doreen-ngonfas">kwilabuin doreen ngonfas</option>
-    <option value="ledru-raymond-michael">ledru raymond michael</option>
-    <option value="lincy-musoro-ngoh">lincy musoro ngoh</option>
-    <option value="lokeng-loic-jinoir">lokeng loic jinoir</option>
-    <option value="mafolac-messanga-arriane">mafolac messanga arriane</option>
-    <option value="mamba-ngoy-constant-marie-ledoux">mamba ngoy constant marie ledoux</option>
-    <option value="mbakem-siephany-halle">mbakem siephany halle</option>
-    <option value="mbom-bongjoh-noella-bih">mbom bongjoh noella bih</option>
-    <option value="mc-eward-afumbom-ngong">mc eward afumbom ngong</option>
-    <option value="mekinda-amougou">mekinda amougou</option>
-    <option value="metila-ngono-gisele">metila ngono gisele</option>
-    <option value="mosama-quinoline-bertha">mosama quinoline bertha</option>
-    <option value="mugeh-solange">mugeh solange</option>
-    <option value="nana-sherina">nana sherina</option>
-    <option value="nchotu-mavet-abongha">nchotu mavet abongha</option>
-    <option value="ndzineng-chelcy-fien">ndzineng chelcy fien</option>
-    <option value="neba-favour-bih">neba favour bih</option>
-    <option value="nfor-belinda-aba">nfor belinda aba</option>
-    <option value="nga-owona-ekani">nga owona ekani</option>
-    <option value="ngong-marinus">ngong marinus</option>
-    <option value="tchuembou-mopen-gwladys-leticia">tchuembou mopen gwladys leticia</option>
-    <option value="nkamenyi-tchio-stadile">nkamenyi tchio stadile</option>
-    <option value="noukoua-florinda-stalone">noukoua florinda stalone</option>
-    <option value="nounkeu-yimga-princesse-elvira">nounkeu yimga princesse elvira</option>
-    <option value="nso-nsongan-germaine">nso nsongan germaine</option>
-    <option value="nsom-kelly-fulai">nsom kelly fulai</option>
-    <option value="nsouanfouo-nzegah-fresnel">nsouanfouo nzegah fresnel</option>
-    <option value="nyemb-sylvestre">nyemb sylvestre</option>
-    <option value="nyuella-nange">nyuella nange</option>
-    <option value="ondike-gladys-mokabwe">ondike gladys mokabwe</option>
-    <option value="ovaa-mbida-marie-lysette">ovaa mbida marie lysette</option>
-    <option value="pangwa-kemayou-mariane-carene">pangwa kemayou mariane carene</option>
-    <option value="precious-faith-afanwi">precious faith afanwi</option>
-    <option value="raye-njifen-nahima">raye njifen nahima</option>
-    <option value="simo-diangha-ariel-stevine">simo diangha ariel stevine</option>
-    <option value="ngwain-dolen">ngwain dolen</option>
-    <option value="song-jerry-afuma">song jerry afuma</option>
-    <option value="song-shalom">song shalom</option>
-    <option value="tamufor-julienne-ning">tamufor julienne ning</option>
-    <option value="tamunting-danila">tamunting danila</option>
-    <option value="tayo-quinivette-ewo">tayo quinivette ewo</option>
-    <option value="teku-rachel-ewah">teku rachel ewah</option>
-    <option value="temgoua-tchangoue-georgy-lafine">temgoua tchangoue georgy lafine</option>
-    <option value="tendong-glenda-ngoh">tendong glenda ngoh</option>
-    <option value="tidoh-tchoffo">tidoh tchoffo</option>
-    <option value="tizee-quintar-anyam-nkeng">tizee quintar anyam nkeng</option>
-    <option value="toh-einstein-ajim">toh einstein ajim</option>
-    <option value="tohman-ephesians-bi">tohman ephesians bi</option>
-    <option value="wain-emmanuel-ndi">wain emmanuel ndi</option>
-    <option value="awafong-sandra-mechie">awafong sandra mechie</option>
-    <option value="yomi-nguewouo-larissa">yomi nguewouo larissa</option>
-    <option value="zoa-elong-neisa">zoa elong neisa</option>
-    <option value="mbiandun-kouamou-jossinet">mbiandun kouamou jossinet</option>
-    <option value="birwe-abel-foulna">birwe abel foulna</option>
-    <option value="nkouakep-diane-laure">nkouakep diane laure</option>
-    <option value="nga-belinga-marie">nga belinga marie</option>
-    <option value="nguevou-ange-etelle">nguevou ange etelle</option>
-    <option value="nnanga-olama-elisabeth">nnanga olama elisabeth</option>
-    <option value="kenfack-stephy-lesterone">kenfack stephy lesterone</option>
-    <option value="njike-tonmy-steve-wilfred">njike tonmy steve wilfred</option>
-    <option value="sinjinge-juliet-mensiy">sinjinge juliet mensiy</option>
-    <option value="mbom-bongjoh-trene-kuboh">mbom bongjoh trene kuboh</option>
+<select id="students" name="students">
+    <option value="" disabled selected>Select a student</option>
+<option value="aboudou belinga gladys">aboudou belinga gladys</option>
+<option value="achille aristide ndebi">achille aristide ndebi</option>
+<option value="achongwa emilio auh">achongwa emilio auh</option>
+<option value="aichatou mohamadou">aichatou mohamadou</option>
+<option value="ananfa dongmo giresse.b.">ananfa dongmo giresse.b.</option>
+<option value="asamyame johnson anyikoh">asamyame johnson anyikoh</option>
+<option value="atehyim theresia abyie">atehyim theresia abyie</option>
+<option value="awah destiny nji">awah destiny nji</option>
+<option value="ayah rashael anne">ayah rashael anne</option>
+<option value="ayuk-enow whitey ashly">ayuk-enow whitey ashly</option>
+<option value="azefack danelle">azefack danelle</option>
+<option value="bakwowi stella jestina nagen">bakwowi stella jestina nagen</option>
+<option value="ban ruth stevie miltread">ban ruth stevie miltread</option>
+<option value="bangwen bikoy steve benjamin">bangwen bikoy steve benjamin</option>
+<option value="banmbong berinice ghakanyuy">banmbong berinice ghakanyuy</option>
+<option value="bebite laura khan">bebite laura khan</option>
+<option value="beyala tina diana christelle yvana">beyala tina diana christelle yvana</option>
+<option value="bong adeline nate">bong adeline nate</option>
+<option value="chiaka lehna anu cheryl">chiaka lehna anu cheryl</option>
+<option value="chifu merrilyn">chifu merrilyn</option>
+<option value="clareince berinyuy">clareince berinyuy</option>
+<option value="dongue jessica daine">dongue jessica daine</option>
+<option value="ekinde mekolle muke queenie-l'or">ekinde mekolle muke queenie-l'or</option>
+<option value="emam rabiatou">emam rabiatou</option>
+<option value="etoundi mvondo martin">etoundi mvondo martin</option>
+<option value="euphrecia bi">euphrecia bi</option>
+<option value="fennyui gliniss laure">fennyui gliniss laure</option>
+<option value="fomena kueda loraine">fomena kueda loraine</option>
+<option value="fongane ruth aben">fongane ruth aben</option>
+<option value="fonjo midrate muyang">fonjo midrate muyang</option>
+<option value="gribone claudine unity">gribone claudine unity</option>
+<option value="jona mbiatan futune">jona mbiatan futune</option>
+<option value="kenmogne tsemo raissa dalvilane">kenmogne tsemo raissa dalvilane</option>
+<option value="kien rilinds anye">kien rilinds anye</option>
+<option value="kikwi petra">kikwi petra</option>
+<option value="kinyuy precious wibra">kinyuy precious wibra</option>
+<option value="kongnyuy hariratu">kongnyuy hariratu</option>
+<option value="kudi erasmus oteh">kudi erasmus oteh</option>
+<option value="kwilabuin doreen ngonfas">kwilabuin doreen ngonfas</option>
+<option value="ledru raymond michael">ledru raymond michael</option>
+<option value="lincy musoro ngoh">lincy musoro ngoh</option>
+<option value="lokeng loic jinoir">lokeng loic jinoir</option>
+<option value="mafolac messanga arriane">mafolac messanga arriane</option>
+<option value="mamba ngoy constant marie ledoux">mamba ngoy constant marie ledoux</option>
+<option value="mbakem siephany halle">mbakem siephany halle</option>
+<option value="mbom bongjoh noella bih">mbom bongjoh noella bih</option>
+<option value="mc eward afumbom ngong">mc eward afumbom ngong</option>
+<option value="mekinda amougou">mekinda amougou</option>
+<option value="metila ngono gisele">metila ngono gisele</option>
+<option value="mosama quinoline bertha">mosama quinoline bertha</option>
+<option value="mugeh solange">mugeh solange</option>
+<option value="nana sherina">nana sherina</option>
+<option value="nchotu mavet abongha">nchotu mavet abongha</option>
+<option value="ndzineng chelcy fien">ndzineng chelcy fien</option>
+<option value="neba favour bih">neba favour bih</option>
+<option value="nfor belinda aba">nfor belinda aba</option>
+<option value="nga owona ekani">nga owona ekani</option>
+<option value="ngong marinus">ngong marinus</option>
+<option value="tchuembou mopen gwladys leticia">tchuembou mopen gwladys leticia</option>
+<option value="nkamenyi tchio stadile">nkamenyi tchio stadile</option>
+<option value="noukoua florinda stalone">noukoua florinda stalone</option>
+<option value="nounkeu yimga princesse elvira">nounkeu yimga princesse elvira</option>
+<option value="nso nsongan germaine">nso nsongan germaine</option>
+<option value="nsom kelly fulai">nsom kelly fulai</option>
+<option value="nsouanfouo nzegah fresnel">nsouanfouo nzegah fresnel</option>
+<option value="nyemb sylvestre">nyemb sylvestre</option>
+<option value="nyuella nange">nyuella nange</option>
+<option value="ondike gladys mokabwe">ondike gladys mokabwe</option>
+<option value="ovaa mbida marie lysette">ovaa mbida marie lysette</option>
+<option value="pangwa kemayou mariane carene">pangwa kemayou mariane carene</option>
+<option value="precious faith afanwi">precious faith afanwi</option>
+<option value="raye njifen nahima">raye njifen nahima</option>
+<option value="simo diangha ariel stevine">simo diangha ariel stevine</option>
+<option value="ngwain dolen">ngwain dolen</option>
+<option value="song jerry afuma">song jerry afuma</option>
+<option value="song shalom">song shalom</option>
+<option value="tamufor julienne ning">tamufor julienne ning</option>
+<option value="tamunting danila">tamunting danila</option>
+<option value="tayo quinivette ewo">tayo quinivette ewo</option>
+<option value="teku rachel ewah">teku rachel ewah</option>
+<option value="temgoua tchangoue georgy lafine">temgoua tchangoue georgy lafine</option>
+<option value="tendong glenda ngoh">tendong glenda ngoh</option>
+<option value="tidoh tchoffo">tidoh tchoffo</option>
+<option value="tizee quintar anyam nkeng">tizee quintar anyam nkeng</option>
+<option value="toh einstein ajim">toh einstein ajim</option>
+<option value="tohman ephesians bi">tohman ephesians bi</option>
+<option value="wain emmanuel ndi">wain emmanuel ndi</option>
+<option value="awafong sandra mechie">awafong sandra mechie</option>
+<option value="yomi nguewouo larissa">yomi nguewouo larissa</option>
+<option value="zoa elong neisa">zoa elong neisa</option>
+<option value="mbiandun kouamou jossinet">mbiandun kouamou jossinet</option>
+<option value="birwe abel foulna">birwe abel foulna</option>
+<option value="nkouakep diane laure">nkouakep diane laure</option>
+<option value="nga belinga marie">nga belinga marie</option>
+<option value="nguevou ange etelle">nguevou ange etelle</option>
+<option value="nnanga olama elisabeth">nnanga olama elisabeth</option>
+<option value="kenfack stephy lesterone">kenfack stephy lesterone</option>
+<option value="njike tonmy steve wilfred">njike tonmy steve wilfred</option>
+<option value="sinjinge juliet mensiy">sinjinge juliet mensiy</option>
+<option value="mbom bongjoh trene kuboh">mbom bongjoh trene kuboh</option>
+
 </select>
 
-    </select>
-    <label for="pin">Enter PIN:</label>
+    <label for="pin">Enter Password:</label>
     <input type="password" id="pin" placeholder="Enter your PIN">
     <button class="button" onclick="markAttendance()">Mark Attendance</button>
     <button class="button export-btn" onclick="exportData()">Export Data</button>
@@ -175,10 +174,107 @@
 
         // Predefined PINs for students
         const pinData = { 
-            "John Doe": "1234", 
-            "Jane Smith": "5678",
-            "Alice Johnson": "9101",
-            "Bob Brown": "1121"
+           "aboudou belinga gladys": "ab51ne",
+"achille aristide ndebi": "ac19pe",
+"achongwa emilio auh": "ac46me",
+"aichatou mohamadou": "ai55ne",
+"ananfa dongmo giresse.b.": "an43me",
+"asamyame johnson anyikoh": "as88re",
+"atehyim theresia abyie": "at20me",
+"awah destiny nji": "aw83ne",
+"ayah rashael anne": "ay13ne",
+"ayuk-enow whitey ashly": "ay56ne",
+"azefack danelle": "az23ne",
+"bakwowi stella jestina nagen": "ba75ne",
+"ban ruth stevie miltread": "ba54me",
+"bangwen bikoy steve benjamin": "ba57mi",
+"banmbong berinice ghakanyuy": "ba94ne",
+"bebite laura khan": "be00ne",
+"beyala tina diana christelle yvana": "be14ne",
+"bong adeline nate": "bo19ne",
+"chiaka lehna anu cheryl": "ch30ne",
+"chifu merrilyn": "choone",
+"clareince berinyuy": "cl63le",
+"dongue jessica daine": "do00ne",
+"ekinde mekolle muke queenie-l'or": "ek60me",
+"emam rabiatou": "em00ne",
+"etoundi mvondo martin": "et00ne",
+"euphrencia bi": "eu64ne",
+"fennyui gliniss laure": "fe27ne",
+"fomena kueda loraine": "fo59ne",
+"fongane ruth aben": "fo64ne",
+"fonjo midrate muyang": "fo73ne",
+"gribone claudine unity": "gr01ne",
+"jona mbiatan futune": "jo58ne",
+"kenmogne tsemo raissa dalvilane": "ke38ne",
+"kien rilinds anye": "ki72ne",
+"kikwi petra": "ki05mi",
+"kinyuy precious wibra": "ki63me",
+"kongnyuy hariratu": "ko47ne",
+"kudi erasmus oteh": "ku76me",
+"kwilabuin doreen ngonfas": "kw03ne",
+"ledru raymond michael": "le36me",
+"lincy musoro ngoh": "li94ne",
+"lokeng loic jinoir": "lo94me",
+"mafolac messanga arriane": "ma03me",
+"mamba ngoy constant marie ledoux": "ma23pe",
+"mbakem siephany halle": "mb17le",
+"mbom bongjoh noella bih": "mb73ne",
+"mc eward afumbom ngong": "mc63ne",
+"mekinda amougou": "me88me",
+"metila ngono gisele": "me90ne",
+"mosama quinoline bertha": "mo37ne",
+"mugeh solange": "mu01ne",
+"nana sherina": "na00ne",
+"nchotu mavet abongha": "nc54me",
+"ndzineng chelcy fien": "nd26me",
+"neba favour bih": "ne23ne",
+"nfor belinda aba": "nf71mi",
+"nga owona ekani": "ng01ne",
+"ngong marinus": "ng95me",
+"tchuembou mopen gwladys leticia": "tc84me",
+"nkamenyi tchio stadile": "nk98ne",
+"noukoua florinda stalone": "no41ne",
+"nounkeu yimga princesse elvira": "no50ne",
+"nso nsongan germaine": "ns00ne",
+"nsom kelly fulai": "ns05le",
+"nsouanfouo nzegah fresnel": "ns27pe",
+"nyemb sylvestre": "ny59me",
+"nyuella nange": "nyoone",
+"ondike gladys mokabwe": "on22mi",
+"ova'a mbida marie lysette": "ov55ne",
+"pangwa kemayou mariane carene": "pa03me",
+"precious faith afanwi": "pr20ne",
+"raye njifen nahima": "ra93de",
+"simo diangha ariel stevine": "si88me",
+"ngwain dolen": "ng37me",
+"song jerry afuma": "so28ne",
+"song shalom": "so88ne",
+"tamufor julienne ning": "ta10ne",
+"tamunting danila": "ta02ne",
+"tayo quinivette ewo": "ta79ne",
+"teku rachel ewah": "te14ne",
+"temgoua tchangoue georgy lafine": "te23ne",
+"tendong glenda ngoh": "te50ne",
+"tidoh tchoffo": "ti10ne",
+"tizee quintar anyam nkeng": "ti93ne",
+"toh einstein ajim": "to36ne",
+"tohman ephesians bi": "to42ne",
+"wain emmanuel ndi": "wa00ne",
+"awafong sandra mechie": "aw59mi",
+"yomi nguewouo larissa": "yo84ne",
+"zoa elong neisa": "zo34ne",
+"mbiandun kouamou jossinet": "mb63sf",
+"birwe abel foulna": "bi70sf",
+"nkouakep diane laure": "nk22sf",
+"nga belinga marie": "ng43sf",
+"nguevou ange etelle": "ng67sf",
+"nnanga olama elisabeth": "nn58sf",
+"kenfack stephy lesterone": "ke47sf",
+"njike tonmy steve wilfred": "nj35tf",
+"sinjinge juliet mensiy": "si20ocae",
+"mbom bongjoh trene kuboh": "mb13ocae"
+
         };
 
         // Load existing attendance data from local storage
