--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <option value="ekinde mekolle muke queenie-l'or">ekinde mekolle muke queenie-l'or</option>
 <option value="emam rabiatou">emam rabiatou</option>
 <option value="etoundi mvondo martin">etoundi mvondo martin</option>
-<option value="euphrecia bi">euphrecia bi</option>
+<option value="euphrencia bi">euphrencia bi</option>
 <option value="fennyui gliniss laure">fennyui gliniss laure</option>
 <option value="fomena kueda loraine">fomena kueda loraine</option>
 <option value="fongane ruth aben">fongane ruth aben</option>
