--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 "nyemb sylvestre": "ny59me",
 "nyuella nange": "nyoone",
 "ondike gladys mokabwe": "on22mi",
-"ova'a mbida marie lysette": "ov55ne",
+"ovaa mbida marie lysette": "ov55ne",
 "pangwa kemayou mariane carene": "pa03me",
 "precious faith afanwi": "pr20ne",
 "raye njifen nahima": "ra93de",
